--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
+
+		<!-- commons-csv -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.8</version>
+		</dependency>
     </dependencies>
 
 	<build>
