--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,25 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>2.7.1</version>
+                <configuration>
+                    <to>
+                        <image>very-good-purchase</image>
+                    </to>
+                    <from>
+                        <image>arm32v7/openjdk:11-jdk-stretch</image>
+                    </from>
+                    <container>
+                        <ports>
+                            <port>8080</port>
+                        </ports>
+                    </container>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
