Can run app in docker-compose stack

--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,9 @@
                         <ports>
                             <port>8080</port>
                         </ports>
+						<jvmFlags>
+							<jvmFlag>-Dspring.profiles.active=prod</jvmFlag>
+						</jvmFlags>
                     </container>
                 </configuration>
             </plugin>
