Bootstrapped npm and maven in build.sh

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - 9000:8080
     volumes:
-      - very-good-purchase-storage:/data
+      - ./data:/data
 
 volumes:
   very-good-purchase-storage:
