--- a/pom.xml
+++ b/pom.xml
@@ -172,7 +172,7 @@
 				<executions>
 					<execution>
 						<id>copy-react-build-files</id>
-						<phase>package</phase>
+						<phase>install</phase>
 						<goals>
 							<goal>copy-resources</goal>
 						</goals>
